--- a/Views/User/ChangePassword.cshtml
+++ b/Views/User/ChangePassword.cshtml
@@ -22,3 +22,9 @@
 
         <button type="submit" class="btn btn-primary">Change Password</button>
 </form>
+
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+    }
